--- a/analysis/notebook_tob.ipynb
+++ b/analysis/notebook_tob.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# todo: include TOB and whole blocks\n",
-    "DATA_DIR_PATH = \"../.data/measurements/\"\n",
-    "LABEL = \"f18999999t20371443s50r_tob10\""
+    "DATA_DIR_PATH = \"../.data/measurements-public/\"\n",
+    "LABEL = \"f18999999t20371443_blocks_tob10_aotonly\""
    ]
   },
   {
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
     "import numpy as np\n",
     "\n",
     "def perform_t_test(sample, alpha=0.05):\n",
-    "    t_stat, p_value = stats.ttest_1samp(sample, 1)\n",
+    "    t_stat, p_value = stats.ttest_1samp(sample, 0)\n",
     "\n",
     "    print(f\"mean-ratio: {np.mean(sample):.2f}\")\n",
     "    print(f\"T-statistic: {t_stat:.2f}\")\n",
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +91,7 @@
      "output_type": "stream",
      "text": [
       "mean-ratio: -0.07\n",
-      "T-statistic: -169.14\n",
+      "T-statistic: -11.62\n",
       "P-value: 0.00\n",
       "\n",
       "Verdict:\n",
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
